# pycaravel

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.rst  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: documentation.yml  pep8.yml  tests.yml
_downloads/: bids_managers.ipynb  bids_managers.py  bids_users.ipynb  cw_users.ipynb  cw_users.py
_downloads/2f22b861a03a6137f5a5093b26037bc5/: bids_managers.ipynb
_downloads/76325e7b5f7c7110f3b0fd858029870f/: bids_users.ipynb
_downloads/765da4615c3107965fbe9f3f2666cf88/: bids_managers.py
_downloads/8aec8a4c9153e09db815307ae6cc03e7/: ensemble_validation.ipynb
_downloads/b7fa8331f9875a43c6ed790eaa5fd1e8/: ensemble_validation.py
_downloads/d95e2b4f7a58b009dd8ac12d21231a72/: rlink_validation.ipynb
_downloads/f178e67971f3de5bcd499da8c38a6d47/: rlink_validation.py
_modules/: index.html
_modules/caravel/: configure.html  io.html  mail.html  parser.html  utils.html  validation.html
_sources/: index.rst.txt  index.txt
_sources/auto_gallery/: bids_managers.txt  bids_users.txt  gallery.txt  index.rst.txt
auto_gallery/: bids_managers.html  bids_users.html  gallery.html  index.html
auto_gallery/bids/: bids_managers.html  bids_users.html
auto_gallery/cw/: cw_users.html
auto_gallery/validation/: ensemble_validation.html  rlink_validation.html
caravel/: __init__.py  _version.py  configure.py  info.py  io.py  mail.py  parser.py  utils.py  validation.py
doc/: requirements.txt
examples/: README.txt  bids_managers.py  bids_users.py
(+105 files in other folders)
